<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_history_time_layout_height"
    android:background="@color/colorHistoryTimeLayout">

    <LinearLayout
        android:id="@+id/item_history_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/item_history_marginRight_Lift"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_history_first_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstTime"
            android:textColor="@color/colorHistoryTimeLayoutFirstTextColor"
            android:textSize="@dimen/item_history_time_text_size" />

        <TextView
            android:id="@+id/item_history_last_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastTime"
            android:textColor="@color/colorHistoryTimeLayoutLastTextColor"
            android:textSize="@dimen/item_history_time_text_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/item_history_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/item_history_marginRight_Lift"
        android:layout_toRightOf="@id/item_history_time_layout"
        android:text="@string/name"
        android:textColor="@color/colorHistoryTimeLayoutNameTextColor"
        android:textSize="@dimen/item_history_time_text_size" />

</RelativeLayout>